<resources>
    <string name="app_name">365carnival</string>
    <string name="version_number">1.4</string>
    <string name="version_name">Version 0.1.9</string>
    <string name="email">support@keysoftamerica.com</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="button_text_home">CARNIVALS</string>
    <string name="home_title">FESTIA</string>

    <string-array name="navigation_menu_items">
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Contact</item>
        <!--<item>Truck On</item>-->
        <item>Sign IN</item>
    </string-array>

    <string-array name="navigation_menu_items_signout">
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Contact</item>
        <!--<item>Truck Off</item>-->
        <item>Sign Out</item>
    </string-array>

    <string-array name="navigation_menu_items_signout_truck_on">
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Contact</item>
        <!--<item>Truck Off</item>-->
        <item>Sign In</item>
    </string-array>

    <string-array name="navigation_menu_items_truck_off_signin">
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Contact</item>
        <!--<item>Truck Off</item>-->
        <item>Sign Out</item>
    </string-array>

    <string-array name="navigation_menu_items_truck_on_signin">
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Contact</item>
        <!--<item>Truck On</item>-->
        <item>Sign Out</item>
    </string-array>

    <string-array name="friend_finder_tabs_list">
        <item>Who are my Friends</item>
        <item>Where are my Friends</item>
    </string-array>

    <string-array name="band_location_tabs_list">
        <item>DISTANCE</item>
        <item>ALPHA SORT</item>
        <item>MY FAVS</item>
        <item>VIEW</item>
        <item>Date</item>
        <item>Information</item>
        <item>Gallery</item>
        <item>Exchange</item>
    </string-array>

    <string name="carnivals_title">Carnivals</string>
    <string name="bands_title">Band Location</string>
    <string name="menu_navigation_title">Navigation Menu</string>

    <string name="network_status">Network Fail</string>
    <string name="network_fail_message">You don\'t have network connection. Please connect and try again!</string>

    <string name="error_status">Bad Response</string>
    <string name="error_message">Some thing went wrong with your request. Please try again!</string>

    <string name="update_location_dialog_title">UPDATE YOUR LOCATION</string>
    <string name="update_location_title">Update Location</string>
    <string name="smart_update_title">Smart Update</string>

    <string name="band">BANDS</string>
    <string name="update">UPDATE</string>
    <string name="stop_at">STOP @</string>
    <string name="select_band">Select Band</string>
    <string name="minute_text">MINUTE</string>
    <string name="updates_text">UPDATES</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <string name="fetes">FETES</string>
    <string name="bands">BANDS</string>
    <string name="band_location">BAND LOCATION</string>
    <string name="band_update">BAND UPDATE</string>
    <string name="smart_update">SMART UPDATE</string>
    <string name="friend_finder_button_text">Friend Finder</string>

    <string name="success_title">Success</string>
    <string name="fail_title">Fail</string>
    <string name="status_message_update_success">Successfully your band was updated</string>
    <string name="status_message_update_fail">Failed to update your band</string>
    <string name="okay">Okay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_update">No Update</string>

    <string name="facebook_app_id">534782700008199</string>
    <!--<string name="facebook_app_id">1842133312695401</string>-->
    <!--<string name="gcm_project_id">mycarnival-1164</string>-->
    <string name="gcm_project_id">874795437111</string>

    <string name="add_friends">Add Friends</string>
    <string name="enable_privacy_mode">Enable Privacy Mode</string>
    <string name="unfriend">UNFRIEND</string>
    <string name="following">FOLLOWING</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="friend_finder_title">Friend Finder</string>
    <string name="invite_btn_text">Invite</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="add_friend">Add Friend</string>
    <string name="email_hint">Enter Friend Email Id</string>


</resources>
