<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_dialog_invite_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="#1e90ff"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_grey_300"
        android:layout_below="@+id/title_dialog_invite_friend"
        android:layout_marginTop="10dp"
        android:id="@+id/view_invite_friend"
        android:layout_marginRight="100dp"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_id_invite"
        android:layout_below="@+id/view_invite_friend"
        android:layout_margin="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_id_invite"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/invite_btn"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/invite_btn_text"
            android:inputType="textEmailAddress"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/cancel_btn"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/cancel_btn_text"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
</RelativeLayout>