<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_view_update_status"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/status_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/success_title"
        android:textColor="@color/black"
        android:paddingBottom="7dp"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/status_message_update_success"
        android:textColor="@color/material_grey_800"
        android:paddingBottom="7dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_grey_300"/>

    <TextView
        android:id="@+id/ok_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/okay"
        android:textColor="@color/cancel_select_picker_color"
        android:padding="10dp"
        />

</LinearLayout>