<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BF000000"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:id="@+id/update_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/update_location_dialog_title"
        android:textColor="@color/white"
        android:paddingBottom="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corner_view1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/band"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/layout_select_band">
            <TextView
                android:id="@+id/text_select_band"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/select_band"
                android:textColor="@color/white" />
            <ImageView
                android:id="@+id/image_select_band"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/drop_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>